@@ -161,7 +161,7 @@ public final class RestResponse extends AbstractResponse {
      * @since 0.9
      */
     public RestResponse assertHeader(final String name, final String value) {
-        return this.assertHeader(name, new IsEqual<>(Collections.singletonList(value)));
+        return this.assertHeader(name, new IsEqual<>(List.of(value)));
     }
 
     /**
@@ -197,7 +197,7 @@ public final class RestResponse extends AbstractResponse {
     public Request follow() {
         this.assertHeader(
             HttpHeaders.LOCATION,
-            new IsEqual<>(Collections.singletonList("http://example.com"))
+            new IsEqual<>(List.of())
         );
         return this.jump(
             URI.create(this.headers().get(HttpHeaders.LOCATION).get(0))
